toolchain/internal/core/analysis/testdata/errors/duplicates/type_const_same_name.vdl
// @expect: E804

type Limits {
  max int
}

const Limits = 10
